1998-08-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acffi.m4: Correct FFIINCLUDES for non-/usr/include case.

1998-08-11  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* acffi.m4: Check for libffi in /usr. 
	(FFIINCLUDES): New variable.  Set to be empty if include
	directory is /usr/include.

1998-08-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4: Remove md_FIND_TCLOBJC_{HEADERS,LIBRARIES}.

	* acnextstep.m4: New file.

	* acobjclibs.m4: Check for objc_malloc and substitute
	OBJC_MALLOC_OBJ.  Define preprocessor HAVE_OBJC_MALLOC symbol
	when objc_malloc already exists in Objective C runtime.

1998-07-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acffi.m4: Rename AC_DEFINE of USE_FFCALL to USE_AVCALL.

1998-07-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acpointerfmt.m4.

	* acpointerfmt.m4: New file.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acobjclibs.m4 and acreplacefuncs.m4.

	* acobjclibs.m4: New file.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acreplacefuncs.m4: New file.  Like AC_REPLACE_FUNCS, but 
	uses .lo suffix.

1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acinline.m4: New file.  

	* Makefile.am: Add acinline.m4 to EXTRA_DIST.

1998-07-18  Alex Lancaster  <alex@santafe.edu>

	* acffi.m4: Make FFI{LIBS, LDFLAGS} variables use curly-braces rather
	than round-braces to ensure that shell scripts variables can be
	assigned these extracted variables.

	* actcltk.m4 : Likewise for {TK,TCL,TCLOBJ}LDFLAGS.

	* acfind.m4: Likewise for _ldflags.

1998-07-13  Alex Lancaster  <alex@santafe.edu>

	* acswarm.m4: Add file.  Add two new m4 macros al_{SWARM_LOAD,
	SWARM_INIT} to search for current Swarm config for applications and
	libraries.

	* Makefile.am (EXTRA_DIST): Add acswarm.m4.

1998-07-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4 (md_FIND_BLT): Don't set default bltlibname to BLT8.0.
